# python-log-analyzer

./: .gitignore  LICENSE  README.md  learning_journey.md  pyproject.toml  repo.md
.github/workflows/: ci.yml
notes/: Note-parser.py
src/: __init__.py  main.py
src/analyzer/: __init__.py  aggregator.py  cli.py  helpers.py  io_reader.py  main.py  parser.py
tests/: test_aggregator.py  test_cli.py  test_io_reader.py  test_parser.py
